# fastapi-dunossauro

./: .gitignore  README.md  pyproject.toml
src/: app.py  exceptions.py  schemas.py  security.py  settings.py
src/migrations/: env.py
src/migrations/versions/: 1306531d20a5_create_users_table.py  2969e84df25f_add_updated_at_field_on_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
